--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -18,7 +18,7 @@ db.database=eksamen
 
 
 # Name of your test-database
-dbtest.database=eksamen_test
+dbtest.database=startcode_test
 
 # Only use this if you REALLY MUST, if not set (recommended) the values for db.xxx  will be used
 # dbtest.server=localhost
